removed Different css files
made all pages run of the same css 
fixed log in and request access inputs
added email and user login

--- a/2000 - Codebase/2100 - Front End/2130 - HTML/g2logbook.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/g2logbook.html
@@ -16,10 +16,15 @@
     <title>Garnet's logbook</title>
   </head>
   <body>
+    <div class="row">
+      <div class="column">
+        <img src="../../2100 - Front End/2160 - Pictures/rickroll-roll.gif" alt="left" style="width: 100%" />
+      </div>
+      <div class="column">
     <h1>Logbook - Garnet</h1>
-    <figure>
+    <figure class="center">
       <img
-        src="../2160 - Pictures/rickroll-roll.gif"
+        src="../../2100 - Front End/2160 - Pictures/rickroll-roll.gif"
         alt="Rick"
         title="roll"
         width="100"
@@ -72,8 +77,10 @@
     </ul>
 
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-
-    <a href="../2150 - PHP/Index.php">Home</a>
-    <p>Copyright &copy Garnet Koebel</p>
+</div>
+        <div class="column">
+            <img src="../../2100 - Front End/2160 - Pictures/rickroll-roll.gif" alt="right" style="width: 100%" />
+        </div>
+    </div>
   </body>
 </html>
