--- a/2000 - Codebase/2100 - Front End/2130 - HTML/glogbook.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/glogbook.html
@@ -16,14 +16,14 @@
     <title>Giordan's logbook</title>
   </head>
   <body>
+    <div class="row">
+        <div class="column">
+            <img src="../../2100 - Front End/2160 - Pictures/rickroll-roll.gif" alt="left" style="width: 100%" />
+        </div>
+        <div class="column">
     <h1>Logbook - Giordan</h1>
-    <figure>
-      <img
-        src="../2160 - Pictures/rickroll-roll.gif"
-        alt="Rick"
-        title="roll"
-        width="100"
-      />
+    <figure class="center">
+      <img src="../../2100 - Front End/2160 - Pictures/rickroll-roll.gif" alt="Rick" title="roll" width="100" />
       <figcaption><strong>Rick:</strong>Likes rolling</figcaption>
     </figure>
     <ul>
@@ -120,8 +120,10 @@
     </ul>
 
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-
-    <a href="../2150 - PHP/Index.php">Home</a>
-    <p>Copyright &copy Giordan Pellegrino</p>
+        </div>
+        <div class="column">
+            <img src="../../2100 - Front End/2160 - Pictures/rickroll-roll.gif" alt="right" style="width: 100%" />
+        </div>
+    </div>    
   </body>
 </html>
