--- a/2000 - Codebase/2100 - Front End/2130 - HTML/index.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/index.html
@@ -13,7 +13,6 @@
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <link rel="stylesheet" href="../2110 - CSS/index.css" type="text/css" />
 
     <title>Project 6 - Homepage</title>
   </head>
@@ -21,74 +20,25 @@
     <h1>Elevator Project</h1>
     <div class="row">
       <div class="column">
-        <img
-          src="../2160 - Pictures/rickroll-roll.gif"
-          alt="left"
-          style="width: 100%"
-        />
+        <img src="../../2100 - Front End/2160 - Pictures/rickroll-roll.gif" alt="left" style="width: 100%"/>
       </div>
       <div class="column">
-        <fieldset style="width: 100%">
-          <legend>Welcome to Project 6</legend>
-          <a
-            href="../2150 - PHP/login.php"
-            class="btn btn-primary btn-lg btn-block active"
-            role="button"
-            aria-pressed="true"
-            >Login</a
-          >
-          <a
-            href="../2150 - PHP/request_access.php"
-            class="btn btn-primary btn-lg btn-block active"
-            role="button"
-            aria-pressed="true"
-            >Signup</a
-          >
-          <a
-            href="../2150 - PHP/about.php"
-            class="btn btn-primary btn-lg btn-block active"
-            role="button"
-            aria-pressed="true"
-            >About</a
-          >
-          <a
-            href="../2150 - PHP/glogbook.php"
-            class="btn btn-primary btn-lg btn-block active"
-            role="button"
-            aria-pressed="true"
-            >Giordan's Logbook</a
-          >
-          <a
-            href="../2150 - PHP/g2logbook.php"
-            class="btn btn-primary btn-lg btn-block active"
-            role="button"
-            aria-pressed="true"
-            >Garnet's Logbook</a
-          >
-          <a
-            href="../2150 - PHP/project_plan.php"
-            class="btn btn-primary btn-lg btn-block active"
-            role="button"
-            aria-pressed="true"
-            >Project Plan</a
-          >
-          <a
-            href="../2150 - PHP/project_details.php"
-            class="btn btn-primary btn-lg btn-block active"
-            role="button"
-            aria-pressed="true"
-            >Project Details</a
-          >
-        </fieldset>
+        <legend>Welcome to Project 6</legend>
+          <a href="../../2100 - Front End/2150 - PHP/login.php" class="btn btn-primary btn-lg btn-block active" role="button" aria-pressed="true" >Login</a>
+          <a href="../../2100 - Front End/2150 - PHP/request_access.php" class="btn btn-primary btn-lg btn-block active" role="button" aria-pressed="true" >Signup</a>
+          <a href="../../2100 - Front End/2150 - PHP/about.php" class="btn btn-primary btn-lg btn-block active" role="button" aria-pressed="true" >About</a>
+          <a href="../../2100 - Front End/2150 - PHP/glogbook.php" class="btn btn-primary btn-lg btn-block active" role="button" aria-pressed="true" >Giordan's Logbook</a>
+          <a href="../../2100 - Front End/2150 - PHP/g2logbook.php" class="btn btn-primary btn-lg btn-block active" role="button" aria-pressed="true" >Garnet's Logbook</a>
+          <a href="../../2100 - Front End/2150 - PHP/project_plan.php" class="btn btn-primary btn-lg btn-block active" role="button" aria-pressed="true" >Project Plan</a>
+          <a href="../../2100 - Front End/2150 - PHP/project_details.php" class="btn btn-primary btn-lg btn-block active" role="button" aria-pressed="true">Project Details</a>
       </div>
       <div class="column">
         <img
-          src="../2160 - Pictures/rickroll-roll.gif"
+          src="../../2100 - Front End/2160 - Pictures/rickroll-roll.gif"
           alt="right"
           style="width: 100%"
         />
       </div>
     </div>
-    <p>Copyright &copy Giordan Pellegrino & Garnet Koebel</p>
   </body>
 </html>
