--- a/2000 - Codebase/2100 - Front End/2130 - HTML/project_details.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/project_details.html
@@ -17,7 +17,15 @@
   </head>
 
   <body>
-    <a href="../2150 - PHP/Index.php">Home</a>
-    <p>Copyright &copy Giordan Pellegrino & Garnet Koebel</p>
+    <div class="row">
+      <div class="column">
+        <img src="../../2100 - Front End/2160 - Pictures/rickroll-roll.gif" alt="left" style="width: 100%" />
+      </div>
+      <div class="column">
+      </div>
+        <div class="column">
+          <img src="../../2100 - Front End/2160 - Pictures/rickroll-roll.gif" alt="right" style="width: 100%" />
+        </div>
+        </div>
   </body>
 </html>
