--- a/2000 - Codebase/2100 - Front End/2130 - HTML/project_plan.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/project_plan.html
@@ -20,6 +20,11 @@
 </head>
 
 <body>
+    <div class="row">
+        <div class="column">
+            <img src="../../2100 - Front End/2160 - Pictures/rickroll-roll.gif" alt="left" style="width: 100%" />
+        </div>
+        <div class="column">
     <h1 id="ppheading" class="heading">Project Plan Breakdown - Weekly</h1>
     <ol>
         <li>CAN protocol design</li>
@@ -42,79 +47,79 @@
         </ul>
     </ol>
 
-    <h1>Gantt Chart</h1>
-    <table>
-        <thead>
-            <tr>
-                <th></th>
-                <th>Week 1</th>
-                <th>Week 2</th>
-                <th>Week 3</th>
-                <th>Week 4</th>
-                <th> ... </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Task 1</td>
-                <td></td>
-                <td>GP</td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Task 2</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>GK</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Task 3</td>
-                <td colspan="2">GK</td>
-                <td></td>
-                <td>GP</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Task 4</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Task 5</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Task 6</td>
-                <td></td>
-                <td></td>
-                <td>GP</td>
-                <td></td>
-                <td></td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <th colspan="6">GP = Giordan Pellegrino   GK = Garnet Koebel</th>
-            </tr>
-        </tfoot>
+    
+    </div>
+    <div class="column">
+        <img src="../../2100 - Front End/2160 - Pictures/rickroll-roll.gif" alt="right" style="width: 100%" />
+    </div>
+</div>
+<h1>Gantt Chart</h1>
+<table class="center t">
+    <thead>
+        <tr>
+            <th></th>
+            <th>Week 1</th>
+            <th>Week 2</th>
+            <th>Week 3</th>
+            <th>Week 4</th>
+            <th> ... </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Task 1</td>
+            <td></td>
+            <td>GP</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Task 2</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>GK</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Task 3</td>
+            <td colspan="2">GK</td>
+            <td></td>
+            <td>GP</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Task 4</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Task 5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Task 6</td>
+            <td></td>
+            <td></td>
+            <td>GP</td>
+            <td></td>
+            <td></td>
+        </tr>
+    </tbody>
+    <tfoot>
+        <tr>
+            <th colspan="6">GP = Giordan Pellegrino GK = Garnet Koebel</th>
+        </tr>
+    </tfoot>
 
-    </table>
-
-</body>
-</html>
-
-    <a href="../2150 - PHP/Index.php">Home</a>
-    <p>Copyright &copy Giordan Pellegrino & Garnet Koebel</p>
+</table>
 </body>
 </html>
