--- a/2000 - Codebase/2100 - Front End/2130 - HTML/headerlogin.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/headerlogin.html
@@ -15,36 +15,36 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../../2100 - Front End/2110 - CSS/style.css" type="text/css" />
 
     <title>Document</title>
 
 </head>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-custom">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="../../2100 - Front End/2150 - PHP/Index.php">2GElevator Project</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="nav-item"><a class="menu" href="../../2100 - Front End/2150 - PHP/about.php">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="../../2100 - Front End/2150 - PHP/about.php">About</a></li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Logbooks <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li class="nav-item">
-                        <a class="menu" href="../../2100 - Front End/150 - PHP/glogbook.php">Giordan's Logbook</a>
+                        <a class="nav-link" href="../../2100 - Front End/150 - PHP/glogbook.php">Giordan's Logbook</a>
                     </li>
                     <li class="nav-item">
-                        <a class="menu" href="../../2100 - Front End/2150 - PHP/g2logbook.php">Garnet's Logbook</a>
+                        <a class="nav-link" href="../../2100 - Front End/2150 - PHP/g2logbook.php">Garnet's Logbook</a>
                     </li>
                 </ul>
             </li>
-            <li class="nav-item"><a class="menu" href="../../2100 - Front End/2150 - PHP/project_plan.php">Project Plan</a></li>
-            <li class="nav-item">
-                <a href="../../2100 - Front End/2150 - PHP/project_details.php">Project Details</a>
+            <li class="nav-item"><a class="nav-link" href="../../2100 - Front End/2150 - PHP/project_plan.php">Project Plan</a></li>
+            <li class="nav-item"><a class="nav-link" href="../../2100 - Front End/2150 - PHP/project_details.php">Project Details</a>
             </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li class="nav-item"><a class="menu" href="../../2100 - Front End/2150 - PHP/member.php">GUI</a></li>
-            <li class="nav-item"><a class="menu" href="../../2200 - Back End/Authentication/logout.php">Logout</a></li>
+            <li class="nav-item"><a class="nav-link" href="../../2100 - Front End/2150 - PHP/member.php">GUI</a></li>
+            <li class="nav-item"><a class="nav-link" href="../../2200 - Back End/Authentication/logout.php">Logout</a></li>
         </ul>
     </div>
 
