--- a/2000 - Codebase/2100 - Front End/2130 - HTML/login.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/login.html
@@ -23,7 +23,7 @@
       <div class="column">
       <legend>Login</legend>
       <div class="form-outline mb-4">
-        <label class="form-label" for="form2Example1">Email or Username:</label>
+        <label class="form-label" for="form2Example1">Username:</label>
         <input type="text" name="user" required id="form2Example1" class="form-control"/>
       </div>
       <div class="form-outline mb-4">
