fixed tabel on webpage and minor changes to supervisor

--- a/2000 - Codebase/2100 - Front End/2130 - HTML/GUI.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/GUI.html
@@ -15,7 +15,6 @@
 
     <script src="https://d3js.org/d3.v4.js"></script>
     <script src="../../2100 - Front End/2140 - JavaScript/Floor1.js"></script>
-
     <title>GUI</title>
 
   </head>
@@ -33,10 +32,7 @@
     <p><input type="submit" name="action" value="Floor 2" onclick="PlayFloor2()"/></p>
     <p><input type="submit" name="action" value="Floor 1" onclick="PlayFloor1()"/></p>
     -->
-     
-      <div id="my_dataviz"></div>
-
-    <input type="submit" name="action" value="Dev" />
+    <input type="submit" name="action" value="Update" />
     <input type="submit" name="action" value="Sabbath" />
     </form>
   </body>
