--- a/2000 - Codebase/2100 - Front End/2130 - HTML/header.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/header.html
@@ -42,7 +42,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li class="nav-item"><a class="nav-link" href="../../2100 - Front End/2150 - PHP/login.php">Login</a></li>
-            <li class="nav-item"><a class="nav-link" href="../../2100 - Front End/2150 - php/request_access.php">Signup</a></li>
+            <li class="nav-item"><a class="nav-link" href="../../2100 - Front End/2150 - PHP/request_access.php">Signup</a></li>
         </ul>
     </div>
 
